--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,3 +1,10 @@
 .table {
     margin-left: 20px;
+    margin-top: 20px;
+}
+
+.page {
+    padding: 100vh, 100vw;
+    background-color: black;
+
 }
